# zeno

./: Cargo.toml  LICENSE  README.md
benches/: storage.rs
data/export/: 20250425122631.md  20250425144153.md
data/inbox/: 20250424120000.json  20250425120917.json  20250425122332.json  20250425122631.json  20250425144153.json
docs/: api.md
examples/: create_note.rs
src/: lib.rs  main.rs
src/cli/: commands.rs  parser.rs
src/error/: mod.rs  types.rs
src/id/: luhmann.rs  mod.rs  timestamp.rs  uuid.rs
src/models/: link.rs  mod.rs  reference.rs  zettel.rs
src/storage/: traits.rs
src/storage/json/: archive.rs  inbox.rs  mod.rs  references.rs
src/utils/: input.rs
src/workflow/: archive.rs  export.rs  inbox.rs  mod.rs  references.rs
tests/: integration.rs  storage_tests.rs  workflow_tests.rs
