[package]
name = "zeno"
version = "1.0.0"
description = "A command-line Zettelkasten system for organizing notes."
authors = ["x2705"]
license = "MIT"
edition = "2024"

[lib]
name = "zeno"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.2"
criterion = "0.5"

[[bin]]
name = "zeno"
path = "src/main.rs"

[[bench]]
name = "storage"
path = "benches/storage.rs"

[[example]]
name = "create_note"
path = "examples/create_note.rs"